GRR20195138-GRR20190372/Original/compilador.output
Terminals unused in grammar

    LABEL
    TYPE
    ARRAY
    OF
    GOTO
    ABRE_COLCHETES
    FECHA_COLCHETES
    ABRE_CHAVES
    FECHA_CHAVES


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: ε

    4 $@3: ε

    5 bloco: parte_declara_vars $@2 parte_declara_subrotinas $@3 comando_composto

    6 $@4: ε

    7 parte_declara_vars: $@4 VAR declara_vars
    8                   | ε

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 $@5: ε

   12 $@6: ε

   13 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA

   14 tipo: TIPO

   15 lista_id_var: lista_id_var VIRGULA IDENT
   16             | IDENT

   17 lista_idents: lista_idents VIRGULA ident_params
   18             | ident_params

   19 ident_params: IDENT

   20 parte_declara_subrotinas: parte_declara_subrotinas declara_procedimento
   21                         | declara_funcao
   22                         | ε

   23 $@7: ε

   24 $@8: ε

   25 $@9: ε

   26 declara_procedimento: PROCEDURE IDENT $@7 param_formais_ou_nada $@8 PONTO_E_VIRGULA bloco $@9 PONTO_E_VIRGULA

   27 $@10: ε

   28 $@11: ε

   29 $@12: ε

   30 $@13: ε

   31 declara_funcao: FUNCTION IDENT $@10 parte_param_formais $@11 DOIS_PONTOS tipo $@12 PONTO_E_VIRGULA bloco $@13 PONTO_E_VIRGULA

   32 param_formais_ou_nada: parte_param_formais
   33                      | ε

   34 parte_param_formais: ABRE_PARENTESES parametros FECHA_PARENTESES

   35 parametros: secao_param_formais PONTO_E_VIRGULA secao_param_formais
   36           | secao_param_formais

   37 var_ou_nada: VAR
   38            | ε

   39 $@14: ε

   40 secao_param_formais: var_ou_nada $@14 lista_idents DOIS_PONTOS tipo

   41 comando_composto: T_BEGIN comandos T_END

   42 $@15: ε

   43 comandos: comandos $@15 PONTO_E_VIRGULA comando
   44         | comando

   45 comando: comando_sem_rotulo

   46 comando_sem_rotulo: atribuicao_ou_procedimento
   47                   | comando_composto
   48                   | leitura
   49                   | escrita
   50                   | comando_condicional
   51                   | comando_repetitivo
   52                   | ε

   53 leitura: READ ABRE_PARENTESES leitura_itens FECHA_PARENTESES

   54 leitura_itens: leitura_itens VIRGULA item_leitura
   55              | item_leitura

   56 item_leitura: IDENT

   57 $@16: ε

   58 $@17: ε

   59 escrita: WRITE ABRE_PARENTESES $@16 escrita_itens $@17 FECHA_PARENTESES

   60 escrita_itens: escrita_itens VIRGULA item_escrita
   61              | item_escrita

   62 item_escrita: expressao

   63 $@18: ε

   64 atribuicao_ou_procedimento: IDENT $@18 atribuicao_continua

   65 $@19: ε

   66 atribuicao_continua: ATRIBUICAO $@19 expressao
   67                    | chamada_de_procedimento
   68                    | procedimento_sem_parametros

   69 $@20: ε

   70 $@21: ε

   71 chamada_de_procedimento: $@20 ABRE_PARENTESES $@21 lista_expressoes FECHA_PARENTESES

   72 procedimento_sem_parametros: ε

   73 comando_condicional: if_then cond_else

   74 $@22: ε

   75 if_then: IF expressao $@22 THEN comando_sem_rotulo

   76 $@23: ε

   77 cond_else: ELSE $@23 comando_sem_rotulo
   78          | ε

   79 $@24: ε

   80 $@25: ε

   81 comando_repetitivo: WHILE $@24 expressao $@25 DO comando_sem_rotulo

   82 $@26: ε

   83 lista_expressoes: expressao $@26 VIRGULA lista_expressoes
   84                 | expressao

   85 expressao: expressao_simples
   86          | expressao_simples relacao expressao_simples

   87 relacao: IGUAL
   88        | DIFERENTE
   89        | MENOR
   90        | MENOR_IGUAL
   91        | MAIOR
   92        | MAIOR_IGUAL

   93 expressao_simples: expressao_simples mais_menos_or termo
   94                  | mais_menos_ou_nada termo

   95 mais_menos_ou_nada: MAIS
   96                   | MENOS
   97                   | ε

   98 mais_menos_or: MAIS
   99              | MENOS
  100              | OR

  101 termo: termo vezes_div_and fator
  102      | fator

  103 vezes_div_and: VEZES
  104              | DIV
  105              | AND

  106 procedimento_ou_nada: chamada_de_procedimento
  107                     | ε

  108 $@27: ε

  109 fator: IDENT $@27 procedimento_ou_nada
  110      | NUMERO
  111      | VALOR_BOOL
  112      | ABRE_PARENTESES expressao FECHA_PARENTESES
  113      | NOT fator


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2 34 53 59 71 112
    FECHA_PARENTESES (260) 2 34 53 59 71 112
    VIRGULA (261) 15 17 54 60 83
    PONTO_E_VIRGULA (262) 2 13 26 31 35 43
    DOIS_PONTOS (263) 13 31 40
    PONTO (264) 2
    T_BEGIN (265) 41
    T_END (266) 41
    VAR (267) 7 37
    IDENT (268) 2 15 16 19 26 31 56 64 109
    ATRIBUICAO (269) 66
    TIPO (270) 14
    PROCEDURE (271) 26
    FUNCTION (272) 31
    IGUAL (273) 87
    MENOR (274) 89
    MENOR_IGUAL (275) 90
    MAIOR (276) 91
    MAIOR_IGUAL (277) 92
    DIFERENTE (278) 88
    AND (279) 105
    OR (280) 100
    NOT (281) 113
    DIV (282) 104
    VEZES (283) 103
    MENOS (284) 96 99
    MAIS (285) 95 98
    IF (286) 75
    THEN (287) 75
    ELSE (288) 77
    WHILE (289) 81
    DO (290) 81
    READ (291) 53
    WRITE (292) 59
    NUMERO (293) 110
    VALOR_BOOL (294) 111
    LABEL (295)
    TYPE (296)
    ARRAY (297)
    OF (298)
    GOTO (299)
    ABRE_COLCHETES (300)
    FECHA_COLCHETES (301)
    ABRE_CHAVES (302)
    FECHA_CHAVES (303)
    LOWER_THAN_ELSE (304)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    programa (51)
        on left: 2
        on right: 0
    $@1 (52)
        on left: 1
        on right: 2
    bloco (53)
        on left: 5
        on right: 2 26 31
    $@2 (54)
        on left: 3
        on right: 5
    $@3 (55)
        on left: 4
        on right: 5
    parte_declara_vars (56)
        on left: 7 8
        on right: 5
    $@4 (57)
        on left: 6
        on right: 7
    declara_vars (58)
        on left: 9 10
        on right: 7 9
    declara_var (59)
        on left: 13
        on right: 9 10
    $@5 (60)
        on left: 11
        on right: 13
    $@6 (61)
        on left: 12
        on right: 13
    tipo <int_val> (62)
        on left: 14
        on right: 13 31 40
    lista_id_var (63)
        on left: 15 16
        on right: 13 15
    lista_idents (64)
        on left: 17 18
        on right: 2 17 40
    ident_params (65)
        on left: 19
        on right: 17 18
    parte_declara_subrotinas (66)
        on left: 20 21 22
        on right: 5 20
    declara_procedimento (67)
        on left: 26
        on right: 20
    $@7 (68)
        on left: 23
        on right: 26
    $@8 (69)
        on left: 24
        on right: 26
    $@9 (70)
        on left: 25
        on right: 26
    declara_funcao (71)
        on left: 31
        on right: 21
    $@10 (72)
        on left: 27
        on right: 31
    $@11 (73)
        on left: 28
        on right: 31
    $@12 (74)
        on left: 29
        on right: 31
    $@13 (75)
        on left: 30
        on right: 31
    param_formais_ou_nada (76)
        on left: 32 33
        on right: 26
    parte_param_formais (77)
        on left: 34
        on right: 31 32
    parametros (78)
        on left: 35 36
        on right: 34
    var_ou_nada (79)
        on left: 37 38
        on right: 40
    secao_param_formais (80)
        on left: 40
        on right: 35 36
    $@14 (81)
        on left: 39
        on right: 40
    comando_composto (82)
        on left: 41
        on right: 5 47
    comandos (83)
        on left: 43 44
        on right: 41 43
    $@15 (84)
        on left: 42
        on right: 43
    comando (85)
        on left: 45
        on right: 43 44
    comando_sem_rotulo (86)
        on left: 46 47 48 49 50 51 52
        on right: 45 75 77 81
    leitura (87)
        on left: 53
        on right: 48
    leitura_itens (88)
        on left: 54 55
        on right: 53 54
    item_leitura (89)
        on left: 56
        on right: 54 55
    escrita (90)
        on left: 59
        on right: 49
    $@16 (91)
        on left: 57
        on right: 59
    $@17 (92)
        on left: 58
        on right: 59
    escrita_itens (93)
        on left: 60 61
        on right: 59 60
    item_escrita (94)
        on left: 62
        on right: 60 61
    atribuicao_ou_procedimento (95)
        on left: 64
        on right: 46
    $@18 (96)
        on left: 63
        on right: 64
    atribuicao_continua (97)
        on left: 66 67 68
        on right: 64
    $@19 (98)
        on left: 65
        on right: 66
    chamada_de_procedimento (99)
        on left: 71
        on right: 67 106
    $@20 (100)
        on left: 69
        on right: 71
    $@21 (101)
        on left: 70
        on right: 71
    procedimento_sem_parametros (102)
        on left: 72
        on right: 68
    comando_condicional (103)
        on left: 73
        on right: 50
    if_then (104)
        on left: 75
        on right: 73
    $@22 (105)
        on left: 74
        on right: 75
    cond_else (106)
        on left: 77 78
        on right: 73
    $@23 (107)
        on left: 76
        on right: 77
    comando_repetitivo (108)
        on left: 81
        on right: 51
    $@24 (109)
        on left: 79
        on right: 81
    $@25 (110)
        on left: 80
        on right: 81
    lista_expressoes (111)
        on left: 83 84
        on right: 71 83
    $@26 (112)
        on left: 82
        on right: 83
    expressao <int_val> (113)
        on left: 85 86
        on right: 62 66 75 81 83 84 112
    relacao <str> (114)
        on left: 87 88 89 90 91 92
        on right: 86
    expressao_simples <int_val> (115)
        on left: 93 94
        on right: 85 86 93
    mais_menos_ou_nada <str> (116)
        on left: 95 96 97
        on right: 94
    mais_menos_or <str> (117)
        on left: 98 99 100
        on right: 93
    termo <int_val> (118)
        on left: 101 102
        on right: 93 94 101
    vezes_div_and <str> (119)
        on left: 103 104 105
        on right: 101
    procedimento_ou_nada (120)
        on left: 106 107
        on right: 109
    fator <int_val> (121)
        on left: 109 110 111 112 113
        on right: 101 102 113
    $@27 (122)
        on left: 108
        on right: 109


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8
    ident_params  go to state 9


State 7

   19 ident_params: IDENT •

    $default  reduce using rule 19 (ident_params)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   17 lista_idents: lista_idents • VIRGULA ident_params

    FECHA_PARENTESES  shift, and go to state 10
    VIRGULA           shift, and go to state 11


State 9

   18 lista_idents: ident_params •

    $default  reduce using rule 18 (lista_idents)


State 10

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 12


State 11

   17 lista_idents: lista_idents VIRGULA • ident_params

    IDENT  shift, and go to state 7

    ident_params  go to state 13


State 12

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    VAR       reduce using rule 6 ($@4)
    $default  reduce using rule 8 (parte_declara_vars)

    bloco               go to state 14
    parte_declara_vars  go to state 15
    $@4                 go to state 16


State 13

   17 lista_idents: lista_idents VIRGULA ident_params •

    $default  reduce using rule 17 (lista_idents)


State 14

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  shift, and go to state 17


State 15

    5 bloco: parte_declara_vars • $@2 parte_declara_subrotinas $@3 comando_composto

    $default  reduce using rule 3 ($@2)

    $@2  go to state 18


State 16

    7 parte_declara_vars: $@4 • VAR declara_vars

    VAR  shift, and go to state 19


State 17

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $default  reduce using rule 2 (programa)


State 18

    5 bloco: parte_declara_vars $@2 • parte_declara_subrotinas $@3 comando_composto

    FUNCTION  shift, and go to state 20

    $default  reduce using rule 22 (parte_declara_subrotinas)

    parte_declara_subrotinas  go to state 21
    declara_funcao            go to state 22


State 19

    7 parte_declara_vars: $@4 VAR • declara_vars

    $default  reduce using rule 11 ($@5)

    declara_vars  go to state 23
    declara_var   go to state 24
    $@5           go to state 25


State 20

   31 declara_funcao: FUNCTION • IDENT $@10 parte_param_formais $@11 DOIS_PONTOS tipo $@12 PONTO_E_VIRGULA bloco $@13 PONTO_E_VIRGULA

    IDENT  shift, and go to state 26


State 21

    5 bloco: parte_declara_vars $@2 parte_declara_subrotinas • $@3 comando_composto
   20 parte_declara_subrotinas: parte_declara_subrotinas • declara_procedimento

    PROCEDURE  shift, and go to state 27

    $default  reduce using rule 4 ($@3)

    $@3                   go to state 28
    declara_procedimento  go to state 29


State 22

   21 parte_declara_subrotinas: declara_funcao •

    $default  reduce using rule 21 (parte_declara_subrotinas)


State 23

    7 parte_declara_vars: $@4 VAR declara_vars •
    9 declara_vars: declara_vars • declara_var

    IDENT     reduce using rule 11 ($@5)
    $default  reduce using rule 7 (parte_declara_vars)

    declara_var  go to state 30
    $@5          go to state 25


State 24

   10 declara_vars: declara_var •

    $default  reduce using rule 10 (declara_vars)


State 25

   13 declara_var: $@5 • lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA

    IDENT  shift, and go to state 31

    lista_id_var  go to state 32


State 26

   31 declara_funcao: FUNCTION IDENT • $@10 parte_param_formais $@11 DOIS_PONTOS tipo $@12 PONTO_E_VIRGULA bloco $@13 PONTO_E_VIRGULA

    $default  reduce using rule 27 ($@10)

    $@10  go to state 33


State 27

   26 declara_procedimento: PROCEDURE • IDENT $@7 param_formais_ou_nada $@8 PONTO_E_VIRGULA bloco $@9 PONTO_E_VIRGULA

    IDENT  shift, and go to state 34


State 28

    5 bloco: parte_declara_vars $@2 parte_declara_subrotinas $@3 • comando_composto

    T_BEGIN  shift, and go to state 35

    comando_composto  go to state 36


State 29

   20 parte_declara_subrotinas: parte_declara_subrotinas declara_procedimento •

    $default  reduce using rule 20 (parte_declara_subrotinas)


State 30

    9 declara_vars: declara_vars declara_var •

    $default  reduce using rule 9 (declara_vars)


State 31

   16 lista_id_var: IDENT •

    $default  reduce using rule 16 (lista_id_var)


State 32

   13 declara_var: $@5 lista_id_var • DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA
   15 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      shift, and go to state 37
    DOIS_PONTOS  shift, and go to state 38


State 33

   31 declara_funcao: FUNCTION IDENT $@10 • parte_param_formais $@11 DOIS_PONTOS tipo $@12 PONTO_E_VIRGULA bloco $@13 PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 39

    parte_param_formais  go to state 40


State 34

   26 declara_procedimento: PROCEDURE IDENT • $@7 param_formais_ou_nada $@8 PONTO_E_VIRGULA bloco $@9 PONTO_E_VIRGULA

    $default  reduce using rule 23 ($@7)

    $@7  go to state 41


State 35

   41 comando_composto: T_BEGIN • comandos T_END

    T_BEGIN  shift, and go to state 35
    IDENT    shift, and go to state 42
    IF       shift, and go to state 43
    WHILE    shift, and go to state 44
    READ     shift, and go to state 45
    WRITE    shift, and go to state 46

    $default  reduce using rule 52 (comando_sem_rotulo)

    comando_composto            go to state 47
    comandos                    go to state 48
    comando                     go to state 49
    comando_sem_rotulo          go to state 50
    leitura                     go to state 51
    escrita                     go to state 52
    atribuicao_ou_procedimento  go to state 53
    comando_condicional         go to state 54
    if_then                     go to state 55
    comando_repetitivo          go to state 56


State 36

    5 bloco: parte_declara_vars $@2 parte_declara_subrotinas $@3 comando_composto •

    $default  reduce using rule 5 (bloco)


State 37

   15 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  shift, and go to state 57


State 38

   13 declara_var: $@5 lista_id_var DOIS_PONTOS • tipo $@6 PONTO_E_VIRGULA

    TIPO  shift, and go to state 58

    tipo  go to state 59


State 39

   34 parte_param_formais: ABRE_PARENTESES • parametros FECHA_PARENTESES

    VAR  shift, and go to state 60

    $default  reduce using rule 38 (var_ou_nada)

    parametros           go to state 61
    var_ou_nada          go to state 62
    secao_param_formais  go to state 63


State 40

   31 declara_funcao: FUNCTION IDENT $@10 parte_param_formais • $@11 DOIS_PONTOS tipo $@12 PONTO_E_VIRGULA bloco $@13 PONTO_E_VIRGULA

    $default  reduce using rule 28 ($@11)

    $@11  go to state 64


State 41

   26 declara_procedimento: PROCEDURE IDENT $@7 • param_formais_ou_nada $@8 PONTO_E_VIRGULA bloco $@9 PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 39

    $default  reduce using rule 33 (param_formais_ou_nada)

    param_formais_ou_nada  go to state 65
    parte_param_formais    go to state 66


State 42

   64 atribuicao_ou_procedimento: IDENT • $@18 atribuicao_continua

    $default  reduce using rule 63 ($@18)

    $@18  go to state 67


State 43

   75 if_then: IF • expressao $@22 THEN comando_sem_rotulo

    MENOS  shift, and go to state 68
    MAIS   shift, and go to state 69

    $default  reduce using rule 97 (mais_menos_ou_nada)

    expressao           go to state 70
    expressao_simples   go to state 71
    mais_menos_ou_nada  go to state 72


State 44

   81 comando_repetitivo: WHILE • $@24 expressao $@25 DO comando_sem_rotulo

    $default  reduce using rule 79 ($@24)

    $@24  go to state 73


State 45

   53 leitura: READ • ABRE_PARENTESES leitura_itens FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 74


State 46

   59 escrita: WRITE • ABRE_PARENTESES $@16 escrita_itens $@17 FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 75


State 47

   47 comando_sem_rotulo: comando_composto •

    $default  reduce using rule 47 (comando_sem_rotulo)


State 48

   41 comando_composto: T_BEGIN comandos • T_END
   43 comandos: comandos • $@15 PONTO_E_VIRGULA comando

    T_END  shift, and go to state 76

    $default  reduce using rule 42 ($@15)

    $@15  go to state 77


State 49

   44 comandos: comando •

    $default  reduce using rule 44 (comandos)


State 50

   45 comando: comando_sem_rotulo •

    $default  reduce using rule 45 (comando)


State 51

   48 comando_sem_rotulo: leitura •

    $default  reduce using rule 48 (comando_sem_rotulo)


State 52

   49 comando_sem_rotulo: escrita •

    $default  reduce using rule 49 (comando_sem_rotulo)


State 53

   46 comando_sem_rotulo: atribuicao_ou_procedimento •

    $default  reduce using rule 46 (comando_sem_rotulo)


State 54

   50 comando_sem_rotulo: comando_condicional •

    $default  reduce using rule 50 (comando_sem_rotulo)


State 55

   73 comando_condicional: if_then • cond_else

    ELSE  shift, and go to state 78

    $default  reduce using rule 78 (cond_else)

    cond_else  go to state 79


State 56

   51 comando_sem_rotulo: comando_repetitivo •

    $default  reduce using rule 51 (comando_sem_rotulo)


State 57

   15 lista_id_var: lista_id_var VIRGULA IDENT •

    $default  reduce using rule 15 (lista_id_var)


State 58

   14 tipo: TIPO •

    $default  reduce using rule 14 (tipo)


State 59

   13 declara_var: $@5 lista_id_var DOIS_PONTOS tipo • $@6 PONTO_E_VIRGULA

    $default  reduce using rule 12 ($@6)

    $@6  go to state 80


State 60

   37 var_ou_nada: VAR •

    $default  reduce using rule 37 (var_ou_nada)


State 61

   34 parte_param_formais: ABRE_PARENTESES parametros • FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 81


State 62

   40 secao_param_formais: var_ou_nada • $@14 lista_idents DOIS_PONTOS tipo

    $default  reduce using rule 39 ($@14)

    $@14  go to state 82


State 63

   35 parametros: secao_param_formais • PONTO_E_VIRGULA secao_param_formais
   36           | secao_param_formais •

    PONTO_E_VIRGULA  shift, and go to state 83

    $default  reduce using rule 36 (parametros)


State 64

   31 declara_funcao: FUNCTION IDENT $@10 parte_param_formais $@11 • DOIS_PONTOS tipo $@12 PONTO_E_VIRGULA bloco $@13 PONTO_E_VIRGULA

    DOIS_PONTOS  shift, and go to state 84


State 65

   26 declara_procedimento: PROCEDURE IDENT $@7 param_formais_ou_nada • $@8 PONTO_E_VIRGULA bloco $@9 PONTO_E_VIRGULA

    $default  reduce using rule 24 ($@8)

    $@8  go to state 85


State 66

   32 param_formais_ou_nada: parte_param_formais •

    $default  reduce using rule 32 (param_formais_ou_nada)


State 67

   64 atribuicao_ou_procedimento: IDENT $@18 • atribuicao_continua

    ATRIBUICAO  shift, and go to state 86

    ABRE_PARENTESES  reduce using rule 69 ($@20)
    $default         reduce using rule 72 (procedimento_sem_parametros)

    atribuicao_continua          go to state 87
    chamada_de_procedimento      go to state 88
    $@20                         go to state 89
    procedimento_sem_parametros  go to state 90


State 68

   96 mais_menos_ou_nada: MENOS •

    $default  reduce using rule 96 (mais_menos_ou_nada)


State 69

   95 mais_menos_ou_nada: MAIS •

    $default  reduce using rule 95 (mais_menos_ou_nada)


State 70

   75 if_then: IF expressao • $@22 THEN comando_sem_rotulo

    $default  reduce using rule 74 ($@22)

    $@22  go to state 91


State 71

   85 expressao: expressao_simples •
   86          | expressao_simples • relacao expressao_simples
   93 expressao_simples: expressao_simples • mais_menos_or termo

    IGUAL        shift, and go to state 92
    MENOR        shift, and go to state 93
    MENOR_IGUAL  shift, and go to state 94
    MAIOR        shift, and go to state 95
    MAIOR_IGUAL  shift, and go to state 96
    DIFERENTE    shift, and go to state 97
    OR           shift, and go to state 98
    MENOS        shift, and go to state 99
    MAIS         shift, and go to state 100

    $default  reduce using rule 85 (expressao)

    relacao        go to state 101
    mais_menos_or  go to state 102


State 72

   94 expressao_simples: mais_menos_ou_nada • termo

    ABRE_PARENTESES  shift, and go to state 103
    IDENT            shift, and go to state 104
    NOT              shift, and go to state 105
    NUMERO           shift, and go to state 106
    VALOR_BOOL       shift, and go to state 107

    termo  go to state 108
    fator  go to state 109


State 73

   81 comando_repetitivo: WHILE $@24 • expressao $@25 DO comando_sem_rotulo

    MENOS  shift, and go to state 68
    MAIS   shift, and go to state 69

    $default  reduce using rule 97 (mais_menos_ou_nada)

    expressao           go to state 110
    expressao_simples   go to state 71
    mais_menos_ou_nada  go to state 72


State 74

   53 leitura: READ ABRE_PARENTESES • leitura_itens FECHA_PARENTESES

    IDENT  shift, and go to state 111

    leitura_itens  go to state 112
    item_leitura   go to state 113


State 75

   59 escrita: WRITE ABRE_PARENTESES • $@16 escrita_itens $@17 FECHA_PARENTESES

    $default  reduce using rule 57 ($@16)

    $@16  go to state 114


State 76

   41 comando_composto: T_BEGIN comandos T_END •

    $default  reduce using rule 41 (comando_composto)


State 77

   43 comandos: comandos $@15 • PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 115


State 78

   77 cond_else: ELSE • $@23 comando_sem_rotulo

    $default  reduce using rule 76 ($@23)

    $@23  go to state 116


State 79

   73 comando_condicional: if_then cond_else •

    $default  reduce using rule 73 (comando_condicional)


State 80

   13 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 117


State 81

   34 parte_param_formais: ABRE_PARENTESES parametros FECHA_PARENTESES •

    $default  reduce using rule 34 (parte_param_formais)


State 82

   40 secao_param_formais: var_ou_nada $@14 • lista_idents DOIS_PONTOS tipo

    IDENT  shift, and go to state 7

    lista_idents  go to state 118
    ident_params  go to state 9


State 83

   35 parametros: secao_param_formais PONTO_E_VIRGULA • secao_param_formais

    VAR  shift, and go to state 60

    $default  reduce using rule 38 (var_ou_nada)

    var_ou_nada          go to state 62
    secao_param_formais  go to state 119


State 84

   31 declara_funcao: FUNCTION IDENT $@10 parte_param_formais $@11 DOIS_PONTOS • tipo $@12 PONTO_E_VIRGULA bloco $@13 PONTO_E_VIRGULA

    TIPO  shift, and go to state 58

    tipo  go to state 120


State 85

   26 declara_procedimento: PROCEDURE IDENT $@7 param_formais_ou_nada $@8 • PONTO_E_VIRGULA bloco $@9 PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 121


State 86

   66 atribuicao_continua: ATRIBUICAO • $@19 expressao

    $default  reduce using rule 65 ($@19)

    $@19  go to state 122


State 87

   64 atribuicao_ou_procedimento: IDENT $@18 atribuicao_continua •

    $default  reduce using rule 64 (atribuicao_ou_procedimento)


State 88

   67 atribuicao_continua: chamada_de_procedimento •

    $default  reduce using rule 67 (atribuicao_continua)


State 89

   71 chamada_de_procedimento: $@20 • ABRE_PARENTESES $@21 lista_expressoes FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 123


State 90

   68 atribuicao_continua: procedimento_sem_parametros •

    $default  reduce using rule 68 (atribuicao_continua)


State 91

   75 if_then: IF expressao $@22 • THEN comando_sem_rotulo

    THEN  shift, and go to state 124


State 92

   87 relacao: IGUAL •

    $default  reduce using rule 87 (relacao)


State 93

   89 relacao: MENOR •

    $default  reduce using rule 89 (relacao)


State 94

   90 relacao: MENOR_IGUAL •

    $default  reduce using rule 90 (relacao)


State 95

   91 relacao: MAIOR •

    $default  reduce using rule 91 (relacao)


State 96

   92 relacao: MAIOR_IGUAL •

    $default  reduce using rule 92 (relacao)


State 97

   88 relacao: DIFERENTE •

    $default  reduce using rule 88 (relacao)


State 98

  100 mais_menos_or: OR •

    $default  reduce using rule 100 (mais_menos_or)


State 99

   99 mais_menos_or: MENOS •

    $default  reduce using rule 99 (mais_menos_or)


State 100

   98 mais_menos_or: MAIS •

    $default  reduce using rule 98 (mais_menos_or)


State 101

   86 expressao: expressao_simples relacao • expressao_simples

    MENOS  shift, and go to state 68
    MAIS   shift, and go to state 69

    $default  reduce using rule 97 (mais_menos_ou_nada)

    expressao_simples   go to state 125
    mais_menos_ou_nada  go to state 72


State 102

   93 expressao_simples: expressao_simples mais_menos_or • termo

    ABRE_PARENTESES  shift, and go to state 103
    IDENT            shift, and go to state 104
    NOT              shift, and go to state 105
    NUMERO           shift, and go to state 106
    VALOR_BOOL       shift, and go to state 107

    termo  go to state 126
    fator  go to state 109


State 103

  112 fator: ABRE_PARENTESES • expressao FECHA_PARENTESES

    MENOS  shift, and go to state 68
    MAIS   shift, and go to state 69

    $default  reduce using rule 97 (mais_menos_ou_nada)

    expressao           go to state 127
    expressao_simples   go to state 71
    mais_menos_ou_nada  go to state 72


State 104

  109 fator: IDENT • $@27 procedimento_ou_nada

    $default  reduce using rule 108 ($@27)

    $@27  go to state 128


State 105

  113 fator: NOT • fator

    ABRE_PARENTESES  shift, and go to state 103
    IDENT            shift, and go to state 104
    NOT              shift, and go to state 105
    NUMERO           shift, and go to state 106
    VALOR_BOOL       shift, and go to state 107

    fator  go to state 129


State 106

  110 fator: NUMERO •

    $default  reduce using rule 110 (fator)


State 107

  111 fator: VALOR_BOOL •

    $default  reduce using rule 111 (fator)


State 108

   94 expressao_simples: mais_menos_ou_nada termo •
  101 termo: termo • vezes_div_and fator

    AND    shift, and go to state 130
    DIV    shift, and go to state 131
    VEZES  shift, and go to state 132

    $default  reduce using rule 94 (expressao_simples)

    vezes_div_and  go to state 133


State 109

  102 termo: fator •

    $default  reduce using rule 102 (termo)


State 110

   81 comando_repetitivo: WHILE $@24 expressao • $@25 DO comando_sem_rotulo

    $default  reduce using rule 80 ($@25)

    $@25  go to state 134


State 111

   56 item_leitura: IDENT •

    $default  reduce using rule 56 (item_leitura)


State 112

   53 leitura: READ ABRE_PARENTESES leitura_itens • FECHA_PARENTESES
   54 leitura_itens: leitura_itens • VIRGULA item_leitura

    FECHA_PARENTESES  shift, and go to state 135
    VIRGULA           shift, and go to state 136


State 113

   55 leitura_itens: item_leitura •

    $default  reduce using rule 55 (leitura_itens)


State 114

   59 escrita: WRITE ABRE_PARENTESES $@16 • escrita_itens $@17 FECHA_PARENTESES

    MENOS  shift, and go to state 68
    MAIS   shift, and go to state 69

    $default  reduce using rule 97 (mais_menos_ou_nada)

    escrita_itens       go to state 137
    item_escrita        go to state 138
    expressao           go to state 139
    expressao_simples   go to state 71
    mais_menos_ou_nada  go to state 72


State 115

   43 comandos: comandos $@15 PONTO_E_VIRGULA • comando

    T_BEGIN  shift, and go to state 35
    IDENT    shift, and go to state 42
    IF       shift, and go to state 43
    WHILE    shift, and go to state 44
    READ     shift, and go to state 45
    WRITE    shift, and go to state 46

    $default  reduce using rule 52 (comando_sem_rotulo)

    comando_composto            go to state 47
    comando                     go to state 140
    comando_sem_rotulo          go to state 50
    leitura                     go to state 51
    escrita                     go to state 52
    atribuicao_ou_procedimento  go to state 53
    comando_condicional         go to state 54
    if_then                     go to state 55
    comando_repetitivo          go to state 56


State 116

   77 cond_else: ELSE $@23 • comando_sem_rotulo

    T_BEGIN  shift, and go to state 35
    IDENT    shift, and go to state 42
    IF       shift, and go to state 43
    WHILE    shift, and go to state 44
    READ     shift, and go to state 45
    WRITE    shift, and go to state 46

    $default  reduce using rule 52 (comando_sem_rotulo)
